--- a/vscode/devcontainers/metrics/.devcontainer/devcontainer.json
+++ b/vscode/devcontainers/metrics/.devcontainer/devcontainer.json
@@ -1,34 +1,28 @@
 {
-	"name": "Your Definition Name Here (Community)",
-
+	"name": "DevContainer demo",
 	// Update the 'dockerComposeFile' list if you have more compose files or use different names.
 	"dockerComposeFile": [
 		"docker-compose-grafana-prometheus.yml",
+		"docker-compose-kafka-dev.yml",
+		//"docker-compose-elastic.yml",
+		"docker-compose-api.yml",
 		"docker-compose.yml"
 	],
-
 	// The 'service' property is the name of the service for the container that VS Code should
 	// use. Update this value and .devcontainer/docker-compose.yml to the real service name.
 	"service": "devcontainer",
-
 	// The 'workspaceFolder' property is the path VS Code should open by default when
 	// connected. Corresponds to a volume mount in .devcontainer/docker-compose.yml
 	"workspaceFolder": "/workspace",
-
 	// Set *default* container specific settings.json values on container create.
 	"settings": {},
-
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [],
-
 	"forwardPorts": [],
-
 	// Uncomment the next line if you want to keep your containers running after VS Code shuts down.
 	// "shutdownAction": "none",
-
 	// Uncomment the next line to use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "uname -a",
-
 	// Comment out to connect as root instead. To add a non-root user, see: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
 }
