--- a/vscode/devcontainers/docker-in-docker/.devcontainer/devcontainer.json
+++ b/vscode/devcontainers/docker-in-docker/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Java 21 + gradle/maven + docker-in-docker",
+	"name": "Docker in Docker",
 	"dockerFile": "Dockerfile",
 	"runArgs": ["--init", "--privileged"],
 	"mounts": ["source=dind-var-lib-docker,target=/var/lib/docker,type=volume"],
@@ -11,9 +11,7 @@
 		"vscode": {
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
-				"ms-azuretools.vscode-docker",
-				"vmware.vscode-boot-dev-pack",
-				"vscjava.vscode-java-pack"
+				"ms-azuretools.vscode-docker"
 			]
 		}
 	},
@@ -22,7 +20,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "docker --version && sdk i gradle && sdk i maven",
+	// "postCreateCommand": "docker --version",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
