--- a/vscode/devcontainers/java/21-gradle-docker/.devcontainer/devcontainer.json
+++ b/vscode/devcontainers/java/21-gradle-docker/.devcontainer/devcontainer.json
@@ -12,7 +12,6 @@
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-azuretools.vscode-docker",
-				"vmware.vscode-boot-dev-pack",
 				"vscjava.vscode-java-pack"
 			]
 		}
@@ -22,7 +21,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "docker --version && sdk i gradle && sdk i maven",
+	// "postCreateCommand": "docker --version",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
